@@ -1,5 +1,5 @@
 Package: javaforce
-Version: 10.5.0
+Version: 10.6.0
 Architecture: @ARCH@
 Maintainer: Peter Quiring <pquiring@jflinux.org>
 Installed-Size: 290
