@@ -54,7 +54,7 @@
   </target>
 
   <target name="release-bin" description="create release zip file">
-    <zip destfile="${app}-${version}.zip">
+    <zip destfile="${app}-${version}-bin.zip">
       <fileset dir=".">
         <include name="*.jar"/>
         <include name="*.txt"/>
@@ -70,20 +70,20 @@
       <fileset dir="../../..">
         <include name="jf/base.*"/>
         <include name="jf/license.txt"/>
-        <include name="jf/projects/{$app}/src/*.java"/>
-        <include name="jf/projects/{$app}/src/*.form"/>
-        <include name="jf/projects/{$app}/*.txt"/>
-        <include name="jf/projects/{$app}/*.xml"/>
-        <include name="jf/projects/{$app}/*.png"/>
-        <include name="jf/projects/{$app}/src/*.png"/>
-        <include name="jf/projects/{$app}/*.ico"/>
-        <include name="jf/projects/{$app}/run.bat"/>
-        <include name="jf/projects/{$app}/nbproject/*.xml"/>
+        <include name="jf/projects/${app}/src/*.java"/>
+        <include name="jf/projects/${app}/src/*.form"/>
+        <include name="jf/projects/${app}/*.txt"/>
+        <include name="jf/projects/${app}/*.xml"/>
+        <include name="jf/projects/${app}/*.png"/>
+        <include name="jf/projects/${app}/src/*.png"/>
+        <include name="jf/projects/${app}/*.ico"/>
+        <include name="jf/projects/${app}/run.bat"/>
+        <include name="jf/projects/${app}/nbproject/*.xml"/>
         <include name="jf/jars/javaforce.jar"/>
         <include name="jf/stubs/*"/>
       </fileset>
     </zip>
-    <move file="{$app}-${version}-src.zip" todir="${home}/release"/>
+    <move file="${app}-${version}-src.zip" todir="${home}/release"/>
   </target>
 
   <target name="clean" description="deletes compiled files">
