@@ -6,7 +6,7 @@
   <property name="src" location="src"/>
   <property name="build" location="classes"/>
   <property name="classpath" location="javaforce.jar"/>
-  <property name="version" value="0.33"/>
+  <property name="version" value="0.34"/>
 
   <import file="../../base.xml"/>
 
@@ -59,7 +59,7 @@
   </target>
 
   <target name="release-bin" depends="jar" description="create release zip file">
-    <zip destfile="jfbroadcast-bin-${version}.zip">
+    <zip destfile="jfbroadcast-${version}-bin.zip">
       <fileset dir=".">
         <include name="*.jar"/>
         <include name="*.txt"/>
@@ -67,11 +67,11 @@
       </fileset>
       <fileset dir="../.." includes="license.txt"/>
     </zip>
-    <move file="jfbroadcast-bin-${version}.zip" todir="${home}/release"/>
+    <move file="jfbroadcast-${version}-bin.zip" todir="${home}/release"/>
   </target>
 
   <target name="release-src" depends="" description="create release zip file">
-    <zip destfile="jfbroadcast-src-${version}.zip">
+    <zip destfile="jfbroadcast-${version}-src.zip">
       <fileset dir="../../..">
         <include name="jf/license.txt"/>
         <include name="jf/base.*"/>
@@ -88,7 +88,7 @@
         <include name="jf/stubs/*"/>
       </fileset>
     </zip>
-    <move file="jfbroadcast-src-${version}.zip" todir="${home}/release"/>
+    <move file="jfbroadcast-${version}-src.zip" todir="${home}/release"/>
   </target>
 
   <target name="javadoc" description="generate java documentation">
