@@ -64,7 +64,7 @@
   </target>
 
   <target name="release-bin" description="create release zip file">
-    <zip destfile="${app}-${version}.zip">
+    <zip destfile="${app}-${version}-bin.zip">
       <fileset dir=".">
         <include name="*.jar"/>
         <include name="readme.txt"/>
@@ -72,11 +72,11 @@
       </fileset>
       <fileset dir="../.." includes="license.txt"/>
     </zip>
-    <move file="${app}-${version}.zip" todir="${home}/release"/>
+    <move file="${app}-${version}-bin.zip" todir="${home}/release"/>
   </target>
 
   <target name="release-src" depends="" description="create release zip file">
-    <zip destfile="${app}-src-${version}.zip">
+    <zip destfile="${app}-${version}-src.zip">
       <fileset dir="../../..">
         <include name="jf/license.txt"/>
         <include name="jf/base.*"/>
@@ -97,7 +97,7 @@
         <include name="jf/stubs/*"/>
       </fileset>
     </zip>
-    <move file="${app}-src-${version}.zip" todir="${home}/release"/>
+    <move file="${app}-${version}-src.zip" todir="${home}/release"/>
   </target>
 
   <target name="clean" description="deletes compiled files">
