@@ -44,6 +44,38 @@
     <copy file="jfvnc.jar" todir="/usr/share/java"/>
   </target>
 
+  <target name="release-bin" description="create release zip file">
+    <zip destfile="${app}-${version}-bin.zip">
+      <fileset dir=".">
+        <include name="*.jar"/>
+        <include name="*.txt"/>
+        <include name="run.bat"/>
+      </fileset>
+      <fileset dir="../.." includes="license.txt"/>
+    </zip>
+    <move file="${app}-${version}-bin.zip" todir="${home}/release"/>
+  </target>
+
+  <target name="release-src" depends="" description="create release zip file">
+    <zip destfile="${app}-${version}-src.zip">
+      <fileset dir="../../..">
+        <include name="jf/base.*"/>
+        <include name="jf/license.txt"/>
+        <include name="jf/projects/${app}/src/*.java"/>
+        <include name="jf/projects/${app}/src/*.form"/>
+        <include name="jf/projects/${app}/*.txt"/>
+        <include name="jf/projects/${app}/*.xml"/>
+        <include name="jf/projects/${app}/*.png"/>
+        <include name="jf/projects/${app}/*.ico"/>
+        <include name="jf/projects/${app}/run.bat"/>
+        <include name="jf/projects/${app}/nbproject/*.xml"/>
+        <include name="jf/jars/javaforce.jar"/>
+        <include name="jf/stubs/*"/>
+      </fileset>
+    </zip>
+    <move file="${app}-${version}-src.zip" todir="${home}/release"/>
+  </target>
+
   <target name="clean" description="deletes compiled files">
     <delete>
       <fileset dir="." includes="**/*.class"/>
