@@ -1,0 +1,2 @@
+@echo off
+javaw -cp javaforce.jar;jfvnc.jar Main %*
