@@ -25,7 +25,7 @@ import javax.swing.*;
 public class JF {
 
   public static String getVersion() {
-    return "10.5.0";
+    return "10.6.0";
   }
 
   public static void sleep(int milli) {
