@@ -1,6 +1,6 @@
 Whatsnew ...
 
-Dec 26, 2015 - v0.21 released!
+Dec 27, 2015 - v0.21 released!
   - fix : added ENTER/ESCAPE hot keys to dialog boxes
 
 Dec 17, 2015 - v0.20 released!
